# fizyr-assessment

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rustfmt.toml
.github/workflows/: ci-rust.yml  rust.yml
src/: error.rs  main.rs
src/api/: mock.rs  mod.rs  openaq.rs  openaq_test.rs
src/cli/: commands.rs  mod.rs
src/db/: mod.rs  postgres.rs
src/models/: mod.rs  openaq.rs
